# harness

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: acoustic3D.cpp  convert_float_to_binary.cpp  convert_to_binary.cpp  convolution.cpp  convolution2D.cpp  convolution2Drun.h  convolutionSeparableY.cpp  convolutionrun.h  gemv.cpp  gemvrun.h  generic.cpp  hotspot.cpp  hotspot3D.cpp  kmeans.cpp  kmeansrun.h  mm.cpp  mmrun.h  mv.cpp  mvrun.h  nbody.cpp  nbodyrun.h  run3D.h  shocStencil2D.cpp  spmv.cpp  spmvrun.h  srad1.cpp  srad2.cpp  stencil.cpp  stencil2d.cpp  stencilNoPad.cpp  stencilNoPadRun.h  stencilrun.h
include/: acoustic3D_harness.h  convolution2D_harness.h  convolutionSeparableY_harness.h  convolution_harness.h  csv_utils.h  file_utils.h  gemv_harness.h  hotspot3D_harness.h  hotspot_harness.h  kernel.h  kmeans_harness.h  mm_harness.h  mmio.h  mv_harness.h  nbody_harness.h  opencl_utils.h  opencl_utils2.h  options.h  run.h  run2.h  shocStencil2D_harness.h  solver.h  sparse_matrix.hpp  spmv_harness.h  srad1_harness.h  srad2_harness.h  stencil2d_harness.h  stencilNoPad_harness.h  stencil_harness.h  utils.h
resources/: gemv.cl  kmeans.cl  mm.cl  mm_tb.cl  mv.cl  nbody.cl
resources/example/: 4_float  binary_configuration.json  configuration.json  example.cl  exec_4.csv  exec_8.csv  int_configuration.json  int_example.cl
resources/example/intArrayAndInt/: exec_8.csv  int_configuration_2.json  int_example_2.cl
scripts/: execute.zsh  explore.py  mkEnvironment.sh
scripts/configs/: UnrollReduce.conf  config2D  config2D.conf  convolution2D.conf  convy.conf  environment-template.conf  example.conf  firstSteps.conf  shoc.conf  template.conf  unroll.conf  unrollReduce.conf
src/: csv_utils.cpp  file_utils.cpp  kernel.cpp  mmio.cpp  opencl_utils.cpp  run.cpp  sparse_matrix.cpp
test/: CMakeLists.txt  random.cpp  test_gemv.cpp  test_kmeans.cpp  test_matmul.cpp  test_mv.cpp  test_nbody.cpp  test_utils.cpp
